app/assets/stylesheets/provider/_legacy_theme.scss
@import 'provider/layouts/main';

div.dashboard_card,
div.wide_dashboard_card,
div.narrow_dashboard_card {
  @include white-box-shadow;
  border: 0;
  margin-bottom: line-height-times(1);
  padding: line-height-times(1);
  overflow: hidden;

  &> table.list:first-child {
    margin-top: line-height-times(-1/2);
  }

  &> table.list:last-child {
    margin-bottom: line-height-times(-1/2);

    tr:last-child th,
    tr:last-child td {
      border-bottom: 0;
    }
  }
}

div.left {
  float: left;
  width: calc(50% - #{line-height-times(1)});
}

div.right,
div.right_narrow {
  float: right;
  width: calc(50% - #{line-height-times(1)});
  padding-bottom: line-height-times(1/2);
}

.self_clear {
  clear: both;
}

.clearfix {
  display:inline-table;
  width: 100%;
}

.self_clear:after, .clearfix:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}

